fix running tests on nodejs 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,24 @@ script:
       nodeVersionMajor=`node -e "console.log(process.versions.node.split('.')[0])"`;
 
       if [ $nodeVersionMajor -eq 14 ]; then
-        npm audit;
+        npm audit --prod;
       else
         echo "*** Do not run \`npm audit\` for non node.js 14 builds ($nodeVersionMajor)";
       fi;
 
     - npm run lint
 
-    - npm test
+    - >
+      nodeVersionMajor=`node -e "console.log(process.versions.node.split('.')[0])"`;
+
+      if [ $nodeVersionMajor -gt 4 ]; then
+        npm test;
+      else
+        npm run testWithNode;
+      fi;
 
     - >
-      nodeVersionMajor=`node --version | grep -Eo 'v[0-9]+' | sed 's/v//'`;
+      nodeVersionMajor=`node -e "console.log(process.versions.node.split('.')[0])"`;
 
       if [ $nodeVersionMajor -eq 14 ]; then
         npm run makeCodeCoverageSummaryReport;
